2004-03-18  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dedname.c, src/ftree.c:
	update old_wd if we rename the directory it was.

2004-03-08  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dedview.c: add a cast to ensure that "%ld" honored.

	* configure.in: remove certify

2004-03-07  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/boxchars.c, src/ded.c, src/ded2s.c, src/dedblip.c, src/dedcmds.c, src/dedcolor.c, src/deddoit.c, src/deddump.c, src/dedfind.c, src/dedfree.c, src/dedline.c, src/dedmake.c, src/dedmsgs.c, src/dedname.c, src/dedread.c, src/dedring.c, src/dedscan.c, src/dedshow.c, src/dedsigs.c, src/dedsize.c, src/dedsort.c, src/dedtags.c, src/dedtype.c, src/deduniq.c, src/dedview.c, src/dedwait.c, src/dlog.c, src/ftree.c, src/history.c, src/inline.c, src/restat.c, src/showpath.c, src/sortset.c:
	remove K&R support, indent'd

	* src/ded.h: remove K&R support

	* makefile.in: remove certify

2003-11-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* install-sh: resync with my-autoconf

2003-07-02  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/ded.c:
	noticed (I don't use it that much anymore) that ded was not resizing.
	One possible cause (actually was in winresize()), was that dedsigs()
	was called before initscr().  That made ded's sigwinch handler override
	ncurses'.  Putting it after lets ncurses return a KEY_RESIZE in cmdch(),
	which works nicer than the arrangement where ded does it all.

	* src/ded.h: change tag_bytes to a long, since off_t != long (NetBSD)

	* src/dedcolor.c:
	remove A_INVIS, since NetBSD curses does not implement it, and it was only
	amusing anyway.

2003-04-26  Thomas E. Dickey  <dickey@invisible-island.net>

	* user/ded.man: add CVS to list of things DED_CM_LOOKUP covers

	* aclocal.m4: use version-number/timestamp on individual macros.
	extended/fixed CF_SUBDIR_PATH

2002-12-21  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/ded.c: change to use CF_LOCALE
